[package]
name = "exampleserver"
version = "0.1.0"
authors = ["roger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "*"
actix-rt = "*"
actix-http = "*"
actix-service = "*"

log = "*"
env_logger = "*"

serde = "*"
serde_json = "*"

futures = "0.3"

bytes = "*"

failure = "*"

tokio = "*"
